Add voters list

--- a/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
@@ -228,7 +228,7 @@
   .m-activityModal__scrollableAreaWrapper {
     margin-left: -100px;
     margin-right: -50px;
-    padding: 10px 50px 20px 110px;
+    padding: 10px 35px 20px 100px;
 
     min-height: 320px;
     height: 100%;
@@ -237,6 +237,13 @@
     position: relative;
     overflow-y: scroll;
   }
+
+  .m-activityModal__scrollableAreaWrapper--with-engagements {
+    m-activity__ownerBlock {
+      padding-bottom: 0;
+    }
+  }
+
   .scrollableAreaBody {
     direction: ltr;
     position: relative;
@@ -255,8 +262,7 @@
     visibility: hidden;
   }
 
-  .m-activityModal__toolbarWrapper {
-    margin: 0 12px 0 4px;
+  .m-activityModal__toolbarWrapper--bordered {
     @include m-theme() {
       border-top: 1px solid themed($m-borderColor--primary);
     }
