--- a/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-uniqueness.component.html
+++ b/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-uniqueness.component.html
@@ -30,7 +30,8 @@
       and combined with a salt key for privacy and security purposes.
     </m-tooltip>
   </div>
-  <div
+  <!-- Bank step -->
+  <!-- <div
     class="m-onboardingUniqueness__optionContainer m-onboardingUniqueness__bankContainer"
     (click)="optionClicked('VerifyBankStep')"
   >
@@ -49,7 +50,10 @@
     >
       Confirm your details by linking your bank account.
     </m-tooltip>
-  </div>
+  </div>-->
+
+  <!-- Wallet step -->
+  <!--
   <div
     class="m-onboardingUniqueness__optionContainer m-onboardingUniqueness__walletContainer"
     (click)="optionClicked('VerifyWalletStep')"
@@ -67,9 +71,9 @@
     >
       Connect your Ethereum wallet to verify your identity.
     </m-tooltip>
-  </div>
+  </div>-->
 </div>
-<div class="m-onboardingUniqueness__divider">
+<!-- <div class="m-onboardingUniqueness__divider">
   <span class="m-onboardingUniqueness__dividerBar"></span>
   <span
     class="m-onboardingUniqueness__midDividerSpan"
@@ -99,4 +103,4 @@
   >
     Buy Tokens
   </a>
-</div>
+</div> -->
