--- a/src/app/modules/onboarding-v3/panel/welcome/welcome.component.html
+++ b/src/app/modules/onboarding-v3/panel/welcome/welcome.component.html
@@ -1,32 +1,63 @@
 <div class="m-onboardingWelcome__textBlock">
-  <h2 class="m-onboardingWelcome__textBlockHeader">Speak freely</h2>
-  <span class="m-onboardingWelcome__textBlockBody"
-    >Post original videos, blogs, photos and thoughts without hidden algorithms.
-    Chat securely with friends, start groups and engage in civil
-    discourse.</span
+  <h2
+    class="m-onboardingWelcome__textBlockHeader"
+    i18n="@@ONBOARDING_WELCOME__SPEAK_FREELY"
   >
+    Speak freely
+  </h2>
+  <span
+    class="m-onboardingWelcome__textBlockBody"
+    i18n="@@ONBOARDING_WELCOME__POST_ORIGINAL_CONTENT_TEXT"
+  >
+    Post original videos, blogs, photos and thoughts without hidden algorithms.
+    Chat securely with friends, start groups and engage in civil discourse.
+  </span>
 </div>
 <div class="m-onboardingWelcome__textBlock">
-  <h2 class="m-onboardingWelcome__textBlockHeader">Support creators</h2>
-  <span class="m-onboardingWelcome__textBlockBody"
-    >Setup membership tiers for your fans to support you in cash or crypto. Put
+  <h2
+    class="m-onboardingWelcome__textBlockHeader"
+    i18n="@@ONBOARDING_WELCOME__SUPPORT_CREATORS"
+  >
+    Support creators
+  </h2>
+  <span
+    class="m-onboardingWelcome__textBlockBody"
+    i18n="@@ONBOARDING_WELCOME__SETUP_TIERS_TEXT"
+  >
+    Setup membership tiers for your fans to support you in cash or crypto. Put
     premium content behind a paywall or support the independent creators you
-    love.</span
-  >
+    love.
+  </span>
 </div>
 <div class="m-onboardingWelcome__textBlock">
-  <h2 class="m-onboardingWelcome__textBlockHeader">Earn crypto</h2>
-  <span class="m-onboardingWelcome__textBlockBody"
-    >Earn tokens for posting and curating content every day. 1 token can be used
+  <h2
+    class="m-onboardingWelcome__textBlockHeader"
+    i18n="@@ONBOARDING_WELCOME__EARN_CRYPTOCURRENCY"
+  >
+    Earn crypto
+  </h2>
+  <span
+    class="m-onboardingWelcome__textBlockBody"
+    i18n="@@ONBOARDING_WELCOME__EARN_TOKENS_TEXT"
+  >
+    Earn tokens for posting and curating content every day. 1 token can be used
     to boost a post for 1,000 views or tip other creators. Track cash and crypto
-    transactions in your wallet.</span
-  >
+    transactions in your wallet.
+  </span>
 </div>
 <div class="m-onboardingWelcome__textBlock">
-  <h2 class="m-onboardingWelcome__textBlockHeader">Earn cash</h2>
-  <span class="m-onboardingWelcome__textBlockBody"
-    >Upgrade to Minds+ or Pro and start earning a share of our company’s
-    revenue, in cash. Unlock exclusive content from our community-powered
-    streaming service and access bonus features.</span
+  <h2
+    class="m-onboardingWelcome__textBlockHeader"
+    i18n="@@ONBOARDING_WELCOME__EARN_CASH"
   >
+    Earn cash
+  </h2>
+  <span
+    class="m-onboardingWelcome__textBlockBody"
+    i18n="@@ONBOARDING_WELCOME__UPGRADE_TEXT"
+  >
+    Upgrade to Minds+ or Pro and start earning a share of our company’s revenue,
+    in cash. Unlock exclusive content from our community-powered streaming
+    service and access bonus features.
+  </span>
 </div>
