--- a/src/app/modules/onboarding-v3/panel/tags/tags.component.html
+++ b/src/app/modules/onboarding-v3/panel/tags/tags.component.html
@@ -1,4 +1,7 @@
-<span class="m-onboardingTags__header">
+<span
+  class="m-onboardingTags__header"
+  i18n="@@ONBOARDING_TAGS__SELECT_ATLEAST_THREE_INFORMATION"
+>
   Select at least three tags that are of interest to you. This will allow you to
   discovery relevant content.
 </span>
