Pay modal checkbox spacing #3994

--- a/src/app/modules/wire/v2/creator/form/form.component.html
+++ b/src/app/modules/wire/v2/creator/form/form.component.html
@@ -286,7 +286,7 @@
         <!--------------------------->
         <!--SELECT BANK ACCOUNT/CARD-->
         <!--------------------------->
-        <div class="m-wireCreatorForm__field">
+        <div class="m-wireCreatorForm__field m-wireCreatorForm__field--card">
           <div
             class="m-wireCreatorForm__label"
             i18n="@@WIRE_CREATOR_FORM__PAYMENT_METHOD"
