--- a/src/app/modules/auth/login.component.ng.scss
+++ b/src/app/modules/auth/login.component.ng.scss
@@ -171,6 +171,8 @@
       &.m-login__joinTheConversation {
         font-size: 14px;
         line-height: 20px;
+        text-decoration: underline;
+        cursor: pointer;
       }
     }
 
