--- a/src/app/modules/forms/login/login.html
+++ b/src/app/modules/forms/login/login.html
@@ -138,8 +138,8 @@
 
   <a
     class="m-login__joinTheConversation"
-    [routerLink]="['/register']"
     *ngIf="showTitle"
+    (click)="onJoinNowClick()"
     i18n="@@LOGIN__JOIN_MINDS_NOW"
   >
     Join Minds Now
