--- a/src/app/modules/onboarding-v3/modal/onboarding-modal.component.ng.scss
+++ b/src/app/modules/onboarding-v3/modal/onboarding-modal.component.ng.scss
@@ -63,6 +63,7 @@
       @include m-theme() {
         border-top: 1px solid themed($m-borderColor--primary);
         border: 1px solid themed($m-blue);
+        color: themed($m-textColor--primary);
       }
     }
   }
