Add hashtag buttons 3283

--- a/src/app/modules/discovery/tags/sidebar-tags.component.html
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.html
@@ -27,6 +27,7 @@
             </div>
           </div>
         </a>
+        <m-discovery__tagButton [tag]="tag"></m-discovery__tagButton>
       </li>
     </ul>
   </div>
