--- a/src/app/modules/plus/marketing.component.html
+++ b/src/app/modules/plus/marketing.component.html
@@ -174,7 +174,7 @@
           >
             Migrate your entire YouTube library to Minds and automatically sync
             new uploads. Optionally post your public content to the Permaweb, a
-            censorship-resitatant and decentralized storage system. Upload
+            censorship-resistant and decentralized storage system. Upload
             unlimited HD video up to 95 minutes in duration. Get priority
             support.
           </p>
