--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -49,6 +49,8 @@
     </a>
   </div>
 
+  <m-discovery__tagWidget></m-discovery__tagWidget>
+
   <div class="m-discoveryFeeds__feed">
     <m-discovery__feedItem
       *ngFor="let entity$ of entities$ | async"
