--- a/src/app/modules/discovery/tags/sidebar-tags.component.ng.scss
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.ng.scss
@@ -12,10 +12,15 @@
   }
 
   .m-discoveryTrends__trend {
+    display: flex;
+    align-items: center;
+
     @include m-theme() {
       border-bottom: 0;
     }
     a {
+      flex-grow: 1;
+      display: inline-block;
       padding: 10px 0;
       .m-discoveryTrendListItem__supportingText--below {
         margin-top: 0;
