add topbar--stackable z-index

--- a/src/stylesheets/z-index.scss
+++ b/src/stylesheets/z-index.scss
@@ -35,6 +35,7 @@ $z-index: (
     tooltip--stackable: 61,
   tooltip: 60,
   // TOPBAR: top navigation bar. Almost always visible. Goes on top of the page body but below the body's tooltips
+    topbar--stackable: 51,
     topbar: 50,
   // MESSENGER: messenger dockpane and chat tabs
     messenger: 40,
