(chore): Added support for Coinbase wallet and changed Metamask texts

--- a/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.html
+++ b/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.html
@@ -16,9 +16,11 @@
       <p
         class="m--blockchain--transaction-overlay--note"
         *ngIf="comp === COMP_METAMASK"
-        i18n="@@M__BLOCKCHAIN__TX_OVERLAY__COMPLETE_USING_METAMASK"
+        i18n="@@M__BLOCKCHAIN__TX_OVERLAY__COMPLETE_USING_WALLET"
       >
-        Please open your Metamask client to complete the transaction.
+        Please open your Wallet Provider client to complete the transaction. If
+        you are using a mobile wallet, like Coinbase, please complete the
+        transaction prompt on your wallet's mobile app
       </p>
 
       <p
