--- a/src/app/modules/wallet/tokens/101/101.component.html
+++ b/src/app/modules/wallet/tokens/101/101.component.html
@@ -94,9 +94,9 @@
     </p>
     <p>
       For OnChain configuration, you have the ability to use MetaMask (a browser
-      plugin), your mobile device, an existing Ethereum address or you can
-      create your own with Minds. We recommend using MetaMask for the most
-      seamless user experience. You can change this address by clicking on the
+      plugin), a mobile wallet or an existing Ethereum address. We recommend
+      using Coinbase for the most seamless user experience. You can change this
+      address by clicking on the
       <a routerLink="/wallet/tokens/addresses">"Addresses"</a> tab on the wallet
       menu
     </p>
