Fix issue with pro topbar appearing above navigation elements

--- a/src/app/modules/pro/channel/channel.component.ng.scss
+++ b/src/app/modules/pro/channel/channel.component.ng.scss
@@ -93,7 +93,7 @@ $min-tablet-pro: 900px;
 
     .m-proChannel__loginRow,
     .m-proChannel__topbar {
-      @include z-index(topbar);
+      @include z-index(body);
       width: 100%;
       box-sizing: border-box;
 
