Do not show embed input if embedCode is not provided

--- a/src/app/modules/modals/share/share.html
+++ b/src/app/modules/modals/share/share.html
@@ -58,7 +58,7 @@
   </div>
 </div>
 
-<div class="m-share__input-container">
+<div class="m-share__input-container" *ngIf="embedCode">
   <div class="m-share__label-container">
     <label [htmlFor]="embedInput">
       <span i18n="@@M_SHARE__EMBED_POST">
