(feat): frontend optimizations to support new block changes

--- a/src/app/modules/legacy/components/cards/activity/activity.html
+++ b/src/app/modules/legacy/components/cards/activity/activity.html
@@ -391,7 +391,7 @@
     <!-- Reminds -->
     <div *ngIf="activity.remind_object">
       <ng-container
-        *ngIf="!isOwnerBlocked(activity.remind_object); else blockedRemindTemplate"
+        *ngIf="!activity.remind_object.blocked; else blockedRemindTemplate"
       >
         <minds-remind
           [object]="activity.remind_object"
